--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /venv/
+/.idea/vcs.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/.gitignore
+/.idea/EmbProg.iml
+/.idea/misc.xml
+/.idea/modules.xml
